src/objects/Case_Contact__c.object
<CustomObject>
    <description>Junction object between Case and Contact allowing multiple Contacts per Case.</description>
    <fields>
        <fullName>Case_Primary_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true is the primary contact on the Case - can only be one, enforced via trigger</description>
        <inlineHelpText>If true is the primary contact on the Case - can only be one, enforced via trigger</inlineHelpText>
        <label>Case Primary Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Contacts</relationshipLabel>
        <relationshipName>Case_Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contact_Status__c</fullName>
        <label>Contact Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Case Contacts (*TBC*)</relationshipLabel>
        <relationshipName>Case_Contacts</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Case Contact</label>
    <nameField>
        <displayFormat>CCON-{000000}</displayFormat>
        <label>Case Contact Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>